--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -107,6 +107,30 @@
                               <div class="col-md-9">
                                 <div class="blog_post">
                                     <div class="blog_details">
+                                        <h2>Dynamic Batching</h2>
+                                        <p>Do you want to speed up training or make it less memory-demanding? One possible solution could be dynamic batching. With this approach, you can dynamically sample batches composed of a variable number of sentences. In this tutorial, we show how to use this technique within SpeechBrain.</p>
+                                        <a href="https://colab.research.google.com/drive/1mypqbHDrusZaIbqPoiEGY-WIbnpMHa2I?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Nautsch  A. and Cornell S.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Dec. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 25min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
                                         <h2>Hyperparameter Optimization</h2>
                                         <p>Do you want to optimize the hyperparameters of your model? Are you tired of doing it by hand? This tutorial will describe how you can optimize the hyperparameter of your SpeechBrain model using the Orion toolkit.</p>
                                         <a href="https://colab.research.google.com/drive/1b-5EOjZC7M9RvfWZ0Pq0HMV0KmQKu730?usp=sharing" class="blog_btn">Open in Google Colab</a>
