--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Key Features</h2>
-        			<p>SpeechBrain is an open-source and all-in-one speech toolkit.
+        			<p>SpeechBrain is an open-source and all-in-one conversational AI toolkit.
                 It is designed to be simple, extremely flexible, and user-friendly. Competitive or state-of-the-art performance is obtained in various domains.</p>
         		</div>
         		<div class="work_inner row">
