--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/partners/logo_badu.png" alt="baidu" style="max-width: 175px; padding-top:20px;"></i>
+                    <img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 175px; padding-top:20px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
