--- a/index.html
+++ b/index.html
@@ -330,7 +330,14 @@
                 <div class="work_item">
                   <img class="img-partner" src="img/sponsors/logo_mila_small.png"></i>
                 </div>
-              </div>
+        </section>
+        <!--================End Screen Area =================-->
+
+        <!--================Screen Area =================-->
+        <section class="screen_area text-center p_120">
+        	<div class="container">
+            <div class="main_title">
+        			<h2>Previous Sponsors</h2>
               <div class="col-lg-4">
                 <div class="work_item">
                     <img class="img-partner" src="img/sponsors/logo_nuance.png" style="max-width: 225px; padding-top:45px;"></i>
