--- a/index.html
+++ b/index.html
@@ -338,28 +338,34 @@
         	<div class="container">
             <div class="main_title">
         			<h2>Previous Sponsors</h2>
+            <p> They are, or they sponsored SpeechBrain! </p>
+		    		<p> <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing"> Our new call for sponsors (2022) is now open. </a></p>
+        		</div>
+            <div class="work_inner row">
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img class="img-partner" src="img/sponsors/logo_nuance.png" style="max-width: 225px; padding-top:45px;"></i>
+                    <img src="img/hf.ico" alt="hf" style="max-width: 170px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img class="img-partner" src="img/sponsors/logo_dolby.png" style="max-width: 175px"></i>
+                    <img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 500px; padding-top:60px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                  <img class="img-partner" src="img/sponsors/logo_nvidia.png" style="max-width: 175px"></i>
+                    <img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img class="img-partner" src="img/sponsors/samsung_official.png" style="max-width: 190px; padding-top:45px;"></i>
+                    <img class="img-partner" src="img/sponsors/logo_vd.png" style="max-width: 250px; padding-top:60px;"></i>
                 </div>
               </div>
-            </div>
-        	</div>
+              <div class="col-lg-4">
+                <div class="work_item">
+                  <img class="img-partner" src="img/sponsors/logo_mila_small.png"></i>
+                </div>
         </section>
         <!--================End Screen Area =================-->
 
