--- a/index.html
+++ b/index.html
@@ -344,27 +344,17 @@
             <div class="work_inner row">
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/hf.ico" alt="hf" style="max-width: 170px;"></i>
+                    <img src="img/sponsors/samsung_official" alt="samsung" style="max-width: 170px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 500px; padding-top:60px;"></i>
+                    <img src="img/sponsors/logo_dolby.png" alt="dolby" style="max-width: 500px; padding-top:60px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></i>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="work_item">
-                    <img class="img-partner" src="img/sponsors/logo_vd.png" style="max-width: 250px; padding-top:60px;"></i>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="work_item">
-                  <img class="img-partner" src="img/sponsors/logo_mila_small.png"></i>
+                    <img src="img/sponsors/logo_nuance.png" alt="nuance" style="max-width: 175px; padding-top:20px;"></i>
                 </div>
         </section>
         <!--================End Screen Area =================-->
