--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <div class="work_inner row">
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/sponsors/samsung_official" alt="samsung" style="max-width: 170px;"></i>
+                    <img src="img/sponsors/samsung_official.png" alt="samsung" style="max-width: 170px;"></i>
                 </div>
               </div>
               <div class="col-lg-4">
