--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 						</div>
 					</div>
 				</div>
+		<p>New internship positions are available! (more info here).
 
       </div>
         </section>
