--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         	<div class="container">
         		<div class="main_title">
 				<p>New internship positions are available! (more info here).</p>
+			</div>
 			<div class="main_title">
         			<h2>Key Features</h2>
         			<p>SpeechBrain is an open-source and all-in-one conversational AI toolkit.
