--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <section class="work_area p_120">
         	<div class="container">
         		<div class="main_title">
-				<p>New internship positions are available! (more info here).</p>
+				<a href="https://drive.google.com/file/d/1pPeDlAd9Ne8aLGzl2gm7rXL3LkBKrZRe/view?usp=sharing">New internship positions are available! (more info here).</a>
 			</div>
 			<div class="main_title">
         			<h2>Key Features</h2>
