--- a/index.html
+++ b/index.html
@@ -323,6 +323,11 @@
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
+                    <img src="img/sponsors/logo_ovh.png" alt="ovh" style="max-width: 250px; padding-top:60px;"></i>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="work_item">
                     <img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></i>
                 </div>
               </div>
