--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
                 </p>
         				</div>
         			</div>
+	     <div class="col-lg-4">
+		 <div class="work_item">
+		 	<i class="lnr-volume-medium"></i>
+		 	<a href="#"><h4>Text-to-Speech</h4></a>
+		 	<p> Text-to-Speech allows users to generate speech signals from an input text.
+		 SpeechBrain supports popular models for TTS(e.g., Tacotron2) and Vocoders (e.g, HiFIGAN).</p>
+		 </div>
+		 </div>
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-smile"></i>
