--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -90,6 +90,30 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
+			 <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Nautsch  A.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">June. 2022<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 45min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Dynamic Batching</h2>
+                                        <p>Profiling and benchmark of SpeechBrain models can serve different purposes and look at different angles. Performance requirements are highly particular to the use case with that one desires to use SpeechBrain. This provides means to comprehensive self-learning as a starting point to individual growth beyond the provided.</p>
+                                        <a href="https://colab.research.google.com/drive/1X9eeAEy19BgEJX4YZWjo1Huku_8cOUGJ?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
                           <article class="row blog_item">
                              <div class="col-md-3">
                                  <div class="blog_info text-right">
