--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -107,7 +107,7 @@
                               <div class="col-md-9">
                                 <div class="blog_post">
                                     <div class="blog_details">
-                                        <h2>Dynamic Batching</h2>
+                                        <h2>Profiling and Benchmark</h2>
                                         <p>Profiling and benchmark of SpeechBrain models can serve different purposes and look at different angles. Performance requirements are highly particular to the use case with that one desires to use SpeechBrain. This provides means to comprehensive self-learning as a starting point to individual growth beyond the provided.</p>
                                         <a href="https://colab.research.google.com/drive/1X9eeAEy19BgEJX4YZWjo1Huku_8cOUGJ?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                     </div>
