--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="img/favicon.ico">
         <title>SpeechBrain: A PyTorch Speech Toolkit</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -40,7 +40,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo_line_big.png" width="175px" alt=""></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/speechbrain-horiz-logo.svg" width="175px" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -94,7 +94,7 @@
 						</div>
 						<div class="col-lg-5">
 							<div class="home_left_img">
-								<img class="img-fluid" src="img/logo_noname_rounded_big.png" style="max-height:300px"alt="">
+								<img class="img-fluid" src="img/speechbrain-round-logo.svg" style="max-height:300px"alt="">
 							</div>
 						</div>
 					</div>
