--- a/tutorial_separation.html
+++ b/tutorial_separation.html
@@ -7,7 +7,7 @@
         <!-- BLOCK INDEX -->
         <meta name="robots" content="noindex">
         <!-- BLOCK INDEX -->
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="img/favicon.ico">
         <title>SpeechBrain</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -29,7 +29,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo_line_big.png" width="175px" alt=""></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/speechbrain-horiz-logo.svg" width="175px" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
