--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
                 <p>A PyTorch Powered Speech Toolkit</p>
 								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
-                <a class="banner_btn3" href="https://speechbrain.discourse.group">Discourse</a>
                 <a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
 		<iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 
-								
+
 							</div>
 						</div>
 						<div class="col-lg-5">
@@ -319,6 +318,11 @@
 		    		<p> <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing"> Our new call for sponsors (2022) is now open. </a></p>
         		</div>
             <div class="work_inner row">
+              <div class="col-lg-4">
+                <div class="work_item">
+                    <img src="img/logo_nle" alt="nle" style="max-width: 170px;"></i>
+                </div>
+              </div>
               <div class="col-lg-4">
                 <div class="work_item">
                     <img src="img/hf.ico" alt="hf" style="max-width: 170px;"></i>
