logo alignement fix

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="work_inner row">
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/logo_nle" alt="nle" style="max-width: 170px;"></i>
+                    <img src="img/sponsors/logo_nle.png" alt="nle" style="max-width: 200px; padding-top:80px"></i>
                 </div>
               </div>
               <div class="col-lg-4">
@@ -350,7 +350,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="work_item">
-                  <img class="img-partner" src="img/sponsors/logo_mila_small.png"></i>
+                  <img class="img-partner" src="img/sponsors/logo_mila_small.png" style="padding-top:60px;"></i>
                 </div>
         </section>
         <!--================End Screen Area =================-->
