--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
                 <a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
 		<iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+		<a class="banner_btn3" href=""https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Call for Sponsors 2023</a>
 
 
 							</div>
@@ -106,9 +107,6 @@
         <!--================Work Area =================-->
         <section class="work_area p_120">
         	<div class="container">
-        		<div class="main_title">
-				<a href="https://github.com/speechbrain/speechbrain/releases/tag/v0.5.12">SpeechBrain 0.5.12 is now available! (more info here).</a>
-			</div>
 			<div class="main_title">
         			<h2>Key Features</h2>
         			<p>SpeechBrain is an open-source and all-in-one conversational AI toolkit.
