--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
         	<div class="container">
 			<div class="main_title">
         			<h2>Key Features</h2>
-        			<p>SpeechBrain is an open-source and all-in-one conversational AI toolkit.
-                It is designed to be simple, extremely flexible, and user-friendly. Competitive or state-of-the-art performance is obtained in various domains.</p>
+        			<p>SpeechBrain is an open-source conversational AI toolkit. We designed it to be simple, flexible, and well-documented. It achieves competitive performance in various domains.</p>
         		</div>
         		<div class="work_inner row">
         			<div class="col-lg-4">
