--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-smile"></i>
+        					<a href="#"><h4>Other Tasks</h4></a>
+                  <p>SpeechBrain also supports Spoken Language Understanding, Language Modeling, Diarization, Speech Translation, Language Identification, Voice Activity Detection, Sound classification, Grapheme-to-Phoneme, and many others.</p>
+        				</div>
+        			</div>
+              <div class="col-lg-4" style="margin:0 auto">
+			
+		
+        				<div class="work_item">
+        					<i class="lnr lnr-smile"></i>
         					<a href="#"><h4>Research & Development</h4></a>
                   <p>SpeechBrain is designed to speed-up research and development of speech technologies.
                     It is modular, flexible, easy-to-customize, and contains several recipes for popular datasets. Documentation and tutorials are here to
