--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		 </div>
               <div class="col-lg-4">
         				<div class="work_item">
-        					<i class="lnr lnr-smile"></i>
+        					<i class="lnr lnr-layers"></i>
         					<a href="#"><h4>Other Tasks</h4></a>
                   <p>SpeechBrain also supports Spoken Language Understanding, Language Modeling, Diarization, Speech Translation, Language Identification, Voice Activity Detection, Sound classification, Grapheme-to-Phoneme, and many others.</p>
         				</div>
