--- a/about.html
+++ b/about.html
@@ -77,22 +77,16 @@
 
         <!--================Work Area =================-->
         <section class="work_area p_120">
-          <div class="container">
-            <div class="main_title discourse">
-        			<p> <img src="img/logo_discourse.png"/> Join our official <a href="https://speechbrain.discourse.group">Discourse</a> to discuss with SpeechBrain users coming from all around the world! <img src="img/logo_discourse.png"/></p>
-        		</div>
             <div class="main_title">
               <h2>Community driven</h2>
-              <p class="justified large">SpeechBrain has been designed to help researchers and developers.
-                The future of SpeechBrain highly depends on this community engagement.
-                Anyone can clone the code, develop new functionalities, raise issues, or create a new discussion.
-                With SpeechBrain we hope to start a symbiotic relationship between the toolkit and the research community. </p>
+              <p class="justified large">We designed SpeechBrain to help researchers and developers. Its success depends on this large community:  anyone can clone the code, develop new functionalities, raise issues, or create a new discussion. 
+ </p>
             </div>
             <div class="main_title">
               <h2>Contributing to SpeechBrain</h2>
               <p class="justified large"> Contributions can take various forms (see our <a href="contributing.html">dedicated page</a>):<br/>
                   1. Researchers can propose and implement new functionalities through pull requests. To ensure high-quality standards, each new pull request will be reviewed by a core team member.<br/>
-                  2. Sponsors can contribute financially or with human resources by contacting us via <a href="mailto:speechbrainproject@gmail.com"> email. </a><br/><br/>
+                  2. Sponsors can contribute financially or with human resources by contacting us via <a href="mailto:speechbrainproject@gmail.com"> email. <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a></a><br/><br/>
                   <b>SpeechBrain needs you in order to evolve!</b>
               </p>
 
@@ -124,17 +118,29 @@
             <div class="main_title">
               <h2>Sponsors</h2>
               <p class="justified large">
-                 Sponsoring allows us to further expand the SpeechBrain team highly increasing the number of new features coming out. It also helps to ensure high quality standards by being able to properly manage the various issues and pull requests coming from the community.
-                 If interested do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
+                 Sponsoring allows us to keep expanding and maintaining SpeechBrain.
+                 If interested in a sponsorship, <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a>. Do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
               </p>
+	      <h2>Current Sponsors</h2>
               <div class="grid_container">
                 <div class="grid">
-                  <div><img src="img/sponsors/logo_mila_small.png" alt=""></div>
+	          <div><img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 500px; padding-top:60px;"></div>
+		  <div><img src="img/hf.ico" alt="hf" style="max-width: 170px;"></i></div>
+                  <div><img class="img-partner" src="img/sponsors/logo_vd.png" style="max-width: 250px; padding-top:60px;"></div>
+		  <div><img src="img/sponsors/logo_ovh.png" alt="ovh" style="max-width: 200px; padding-top:50px;"></div>
+		  <div><img src="img/sponsors/logo_nle.png" alt="nle" style="max-width: 200px; padding-top:80px"></div>
+		  <div><img class="img-partner" src="img/sponsors/logo_mila_small.png" style="padding-top:60px;"></div>
+		  <div><img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></div>
+                </div>
+              </div>
+		    
+	      <h2>Previous Sponsors</h2>
+              <div class="grid_container">
+                <div class="grid">
                   <div><img src="img/sponsors/logo_nuance.png" alt=""></div>
                   <div><img src="img/sponsors/logo_dolby.png" alt=""></div>
                   <div><img src="img/sponsors/logo_nvidia.png" alt=""></div>
                   <div><img src="img/sponsors/samsung_official.png" alt=""></div>
-                  <div><img src="img/sponsors/logo_vd.png" alt=""></div>
                 </div>
               </div>
             </div>
