--- a/contributing.html
+++ b/contributing.html
@@ -67,7 +67,7 @@
 				<div class="container">
 					<div class="blog_b_text text-center">
 						<h2>Contributing</h2>
-						<h3>Everyone is welcome</h3>
+						<h3>Everyone is welcome!</h3>
 
 					</div>
 				</div>
@@ -77,10 +77,6 @@
 
         <!--================Work Area =================-->
         <section class="work_area p_120">
-          <div class="container">
-            <div class="main_title discourse">
-        			<p> <img src="img/logo_discourse.png"/> Join our official <a href="https://speechbrain.discourse.group">Discourse</a> to discuss with SpeechBrain users coming from all around the world! <img src="img/logo_discourse.png"/></p>
-        		</div>
             <div class="main_title">
               <h2>Contributing to the code of SpeechBrain</h2>
               <p class="justified large"> The goal is to write a set of libraries that process audio and speech in several ways.
@@ -90,6 +86,14 @@
               <h3> Zen of SpeechBrain </h3>
               <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.
               Ideally, the code should have the following features: <p> <br/>
+	      <ul>
+  	      <li>Simple</li>
+  	      <li>Readable</li>
+  	      <li>Efficient</li>
+	      <li>Modular</li>
+	      <li>Well-documented</li>
+	      </ul>
+		    
 
               <p class="justified large"> <b> Simple: </b> the code must be easy to understand even by students or by users that are not professional programmers or speech researchers.
                 Try to design your code such that it can be easily read. Given alternatives with the same level of performance, code the simplest one (i.e the most explicit manner is preferred). <br/><br/>
