--- a/contributing.html
+++ b/contributing.html
@@ -78,11 +78,12 @@
         <!--================Work Area =================-->
         <section class="work_area p_120">
             <div class="main_title">
-              <h2>Contributing to the code of SpeechBrain</h2>
-              <p class="justified large"> The goal is to write a set of libraries that process audio and speech in several ways.
-                It is crucial to write a set of homogeneous libraries that are all compliant to a set of guidelines all described
+              <h2>Contributing to SpeechBrain</h2>
+              <p class="justified large"> The goal is to collectively write a set of open-source libraries for Conversational AI.
+                It is crucial to write a set of homogeneous libraries that are all compliant with a set of guidelines described
                 in our <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> documentation </a>.
               </p>
+	      <br>
               <h3> Zen of SpeechBrain </h3>
               <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.
               Ideally, the code should have the following features: <p> <br/>
