--- a/contributing.html
+++ b/contributing.html
@@ -85,14 +85,13 @@
               </p>
 	      <br>
               <h3> Zen of SpeechBrain </h3>
-              <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.
-the code must be easy to understand even by students or users that are not professional programmers or speech researchers.
+              <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.If you want to contribute, keep in mind the following features:
+	<b>Simplicity:</b> the code must be easy to understand even by students or users that are not professional programmers or speech researchers.
  Design your code such that it can be easily read. Given alternatives with the same level of performance, code the simplest one. <br/><br/>
-
-                <b>Efficient:</b> The code should be as efficient as possible. Contributors should maximize the use of pytorch native operations
+                <b>Modularity:</b> Write your code to be modular and well-fitting with the other functionalities of the toolkit. The idea is to develop a bunch of models that can be naturally interconnected with each other. <br/><br/>
+                 <b>Efficiency:</b> The code should be as efficient as possible. Contributors should maximize the use of pytorch native operations
 <br/><br/>
-                <b>Modular:</b> Write your code to be modular and well-fitting with the other functionalities of the toolkit. The idea is to develop a bunch of models that can be naturally interconnected with each other. <br/><br/>
-                <b>Well documented:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
+		      <b>Docomentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
 		      
               <h3> How to get my code into SpeechBrain? </h3>
               <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Hence, the process of integrating your code
@@ -105,13 +104,7 @@ the code must be easy to understand even by students or users that are not profe
                 <b>Details about this process (i.e including steps for installating the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
               </p>
               <h3> How can I help? </h3>
-              <p class="justified large"> Interractions between speech technologies and deep learning are various and numerous.
-                We believe that the toolkit will evolve accordingly to the needs
-                of the different research fields and industry. Examples of contributions include new recipes, better models for higher performance,
-                new external functionalities, or even core changes and extensions. Feel free to jump into our <a href="https://speechbrain.discourse.group">Discourse</a> or <a href="https://github.com/speechbrain/speechbrain">GitHub</a> to see if any existing issue remains unsolved!
-              </p>
-              <h3>SpeechBrain Roadmap</h3>
-              <p class="justified large"> As a community-based and open source project, SpeechBrain needs the help of its community to grow in the right direction. Opening the roadmap to our users enable the toolkit to benefit from new ideas, new research axes or even new technologies. The roadmap, available on our <a href="https://speechbrain.discourse.group/t/speechbrain-a-community-roadmap/179">Discourse</a>, lists all the changes and updates that need to be done in the current version of SpeechBrain. Users are more than welcome to propose new items via new Discourse topics!
+              <p class="justified large">  Examples of contributions include new recipes, new models, new external functionalities, solving issues/bugs.
               </p>
             </div>
 
