--- a/contributing.html
+++ b/contributing.html
@@ -95,14 +95,13 @@
 		      <b>Docomentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
 		      
               <h3> How to get my code into SpeechBrain? </h3>
-              <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Hence, the process of integrating your code
-                to the toolkit will be done via this plateform. Then, three steps can be followed: <br/><br/>
-                <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailled in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>. <br/>
-                <b>2.</b> Add your code and make sure that the tests still run properly. Commit your changes to your fork with our pre-commit tests to ensure the normalisation of your code.
+              <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Contributing requires three steps: <br/><br/>
+                <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailed in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>. <br/>
+                <b>2.</b> Write your code and test it properly. Commit your changes to your fork with our pre-commit tests to ensure tests are passing.
                 Then open a pull request on the official repository.<br/>
                 <b>3.</b> Participate in the review process. Each pull request is reviewed by one or two reviewers.
-                Please integrate their feedbacks into your code. Once reviewers are happy with your pull request, they will merge it into the official code. <br/><br/>
-                <b>Details about this process (i.e including steps for installating the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
+                Please integrate their feedback into your code. Once reviewers are happy with your pull request, they will merge it into the official code. <br/><br/>
+                <b>Details about this process (i.e including steps for installing the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
               </p>
               <h3> How can I help? </h3>
               <p class="justified large">  Examples of contributions include new recipes, new models, new external functionalities, solving issues/bugs.
