--- a/index.html
+++ b/index.html
@@ -376,6 +376,11 @@
                     <img src="img/sponsors/logo_dolby.png" alt="dolby" style="max-width: 500px; padding-top:60px;"></i>
                 </div>
               </div>
+	      <div class="col-lg-4">
+                <div class="work_item">
+                    <img src="img/sponsors/logo_nvidia.png" alt="nvidia"></i>
+                </div>
+			
               <div class="col-lg-4">
                 <div class="work_item">
                     <img src="img/sponsors/logo_nuance.png" alt="nuance" style="max-width: 175px; padding-top:20px;"></i>
