--- a/index.html
+++ b/index.html
@@ -365,26 +365,14 @@
             <p> They are, or they sponsored SpeechBrain! </p>
 		    		<p> <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing"> Our new call for sponsors (2022) is now open. </a></p>
         		</div>
-            <div class="work_inner row">
-              <div class="col-lg-4">
-                <div class="work_item">
-                    <img src="img/sponsors/samsung_official.png" alt="samsung" style="max-width: 170px;"></i>
+               <div class="grid_container">
+                <div class="grid">
+                  <div><img src="img/sponsors/logo_nuance.png" alt=""></div>
+                  <div><img src="img/sponsors/logo_dolby.png" alt=""></div>
+                  <div><img src="img/sponsors/logo_nvidia.png" alt=""></div>
+                  <div><img src="img/sponsors/samsung_official.png" alt=""></div>
                 </div>
               </div>
-              <div class="col-lg-4">
-                <div class="work_item">
-                    <img src="img/sponsors/logo_dolby.png" alt="dolby" style="max-width: 500px; padding-top:60px;"></i>
-                </div>
-              </div>
-	      <div class="col-lg-4">
-                <div class="work_item">
-                    <img src="img/sponsors/logo_nvidia.png" alt="nvidia"></i>
-                </div>
-			
-              <div class="col-lg-4">
-                <div class="work_item">
-                    <img src="img/sponsors/logo_nuance.png" alt="nuance" style="max-width: 175px; padding-top:20px;"></i>
-                </div>
         </section>
         <!--================End Screen Area =================-->
 
