Fix typo : documentation
Change "Docomentation" to Documentation

--- a/contributing.html
+++ b/contributing.html
@@ -92,7 +92,7 @@
                 <b>Modularity:</b> Write your code to be modular and well-fitting with the other functionalities of the toolkit. The idea is to develop a bunch of models that can be naturally interconnected with each other. <br/><br/>
                  <b>Efficiency:</b> The code should be as efficient as possible. Contributors should maximize the use of pytorch native operations
 <br/><br/>
-		      <b>Docomentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
+		      <b>Documentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
 	<br/><br/>      
               <h3> How to get my code into SpeechBrain? </h3>
               <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Contributing requires three steps: <br/><br/>
